--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -29,7 +29,7 @@
                 <div class="card dash-widget">
                     <div class="card-body">
                         <div class="dash-widget-info">
-                            <h3>{{projects.count}}</h3>
+                            <h3>{{project_list.count}}</h3>
                             <span>Projects</span>
                         </div>
                     </div>
@@ -39,7 +39,7 @@
                 <div class="card dash-widget">
                     <div class="card-body">
                         <div class="dash-widget-info">
-                            <h3>44</h3>
+                            <h3>{{client_list.count}}</h3>
                             <span>Clients</span>
                         </div>
                     </div>
@@ -49,7 +49,7 @@
                 <div class="card dash-widget">
                     <div class="card-body">
                         <div class="dash-widget-info">
-                            <h3>{{tasks.count}}</h3>
+                            <h3>{{task_list.count}}</h3>
                             <span>Tasks</span>
                         </div>
                     </div>
@@ -81,196 +81,29 @@
                                     <th>Name</th>
                                     <th>Email</th>
                                     <th>Status</th>
-                                    <th class="text-right">Action</th>
                                 </tr>
                                 </thead>
                                 <tbody>
+                                {% for client in client_list %}
                                 <tr>
                                     <td>
                                         <h2 class="table-avatar">
-                                            <a class="avatar" href="#"><img alt=""
-                                                                            src="assets/img/profiles/avatar-19.jpg"></a>
-                                            <a href="client-profile.html">Barry Cuda <span>CEO</span></a>
+                                            <a href="{% url 'AdminClientDetailView' client.id %}"><img class="avatar" alt="Client Profile Photo" src="{{client.client_avatar.url}}"></a>
+                                            <a href="{% url 'AdminClientDetailView' client.id %}">{{client.username}} <span>{{client.position}}</span></a>
                                         </h2>
                                     </td>
-                                    <td>barrycuda@example.com</td>
+                                    <td>{{client.email}}</td>
                                     <td>
-                                        <div class="dropdown action-label">
-                                            <a aria-expanded="false" class="btn btn-white btn-sm btn-rounded dropdown-toggle"
-                                               data-toggle="dropdown" href="#">
-                                                <i class="fa fa-dot-circle-o text-success"></i> Active
-                                            </a>
-                                            <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" href="#"><i
-                                                        class="fa fa-dot-circle-o text-success"></i> Active</a>
-                                                <a class="dropdown-item" href="#"><i
-                                                        class="fa fa-dot-circle-o text-danger"></i> Inactive</a>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="text-right">
-                                        <div class="dropdown dropdown-action">
-                                            <a aria-expanded="false" class="action-icon dropdown-toggle" data-toggle="dropdown"
-                                               href="#"><i class="material-icons">more_vert</i></a>
-                                            <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" href="javascript:void(0)"><i
-                                                        class="fa fa-pencil m-r-5"></i> Edit</a>
-                                                <a class="dropdown-item" href="javascript:void(0)"><i
-                                                        class="fa fa-trash-o m-r-5"></i> Delete</a>
-                                            </div>
-                                        </div>
+                                        {% if client.active_status == True %}<i class="fa fa-dot-circle-o text-success"></i> Active {% else %}<i class="fa fa-dot-circle-o text-danger"></i> Inactive {% endif %}
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td>
-                                        <h2 class="table-avatar">
-                                            <a class="avatar" href="#"><img alt=""
-                                                                            src="assets/img/profiles/avatar-19.jpg"></a>
-                                            <a href="client-profile.html">Tressa Wexler <span>Manager</span></a>
-                                        </h2>
-                                    </td>
-                                    <td>tressawexler@example.com</td>
-                                    <td>
-                                        <div class="dropdown action-label">
-                                            <a aria-expanded="false" class="btn btn-white btn-sm btn-rounded dropdown-toggle"
-                                               data-toggle="dropdown" href="#">
-                                                <i class="fa fa-dot-circle-o text-danger"></i> Inactive
-                                            </a>
-                                            <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" href="#"><i
-                                                        class="fa fa-dot-circle-o text-success"></i> Active</a>
-                                                <a class="dropdown-item" href="#"><i
-                                                        class="fa fa-dot-circle-o text-danger"></i> Inactive</a>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="text-right">
-                                        <div class="dropdown dropdown-action">
-                                            <a aria-expanded="false" class="action-icon dropdown-toggle" data-toggle="dropdown"
-                                               href="#"><i class="material-icons">more_vert</i></a>
-                                            <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" href="javascript:void(0)"><i
-                                                        class="fa fa-pencil m-r-5"></i> Edit</a>
-                                                <a class="dropdown-item" href="javascript:void(0)"><i
-                                                        class="fa fa-trash-o m-r-5"></i> Delete</a>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <h2 class="table-avatar">
-                                            <a class="avatar" href="client-profile.html"><img alt=""
-                                                                                              src="assets/img/profiles/avatar-07.jpg"></a>
-                                            <a href="client-profile.html">Ruby Bartlett <span>CEO</span></a>
-                                        </h2>
-                                    </td>
-                                    <td>rubybartlett@example.com</td>
-                                    <td>
-                                        <div class="dropdown action-label">
-                                            <a aria-expanded="false" class="btn btn-white btn-sm btn-rounded dropdown-toggle"
-                                               data-toggle="dropdown" href="#">
-                                                <i class="fa fa-dot-circle-o text-danger"></i> Inactive
-                                            </a>
-                                            <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" href="#"><i
-                                                        class="fa fa-dot-circle-o text-success"></i> Active</a>
-                                                <a class="dropdown-item" href="#"><i
-                                                        class="fa fa-dot-circle-o text-danger"></i> Inactive</a>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="text-right">
-                                        <div class="dropdown dropdown-action">
-                                            <a aria-expanded="false" class="action-icon dropdown-toggle" data-toggle="dropdown"
-                                               href="#"><i class="material-icons">more_vert</i></a>
-                                            <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" href="javascript:void(0)"><i
-                                                        class="fa fa-pencil m-r-5"></i> Edit</a>
-                                                <a class="dropdown-item" href="javascript:void(0)"><i
-                                                        class="fa fa-trash-o m-r-5"></i> Delete</a>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <h2 class="table-avatar">
-                                            <a class="avatar" href="client-profile.html"><img alt=""
-                                                                                              src="assets/img/profiles/avatar-06.jpg"></a>
-                                            <a href="client-profile.html"> Misty Tison <span>CEO</span></a>
-                                        </h2>
-                                    </td>
-                                    <td>mistytison@example.com</td>
-                                    <td>
-                                        <div class="dropdown action-label">
-                                            <a aria-expanded="false" class="btn btn-white btn-sm btn-rounded dropdown-toggle"
-                                               data-toggle="dropdown" href="#">
-                                                <i class="fa fa-dot-circle-o text-success"></i> Active
-                                            </a>
-                                            <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" href="#"><i
-                                                        class="fa fa-dot-circle-o text-success"></i> Active</a>
-                                                <a class="dropdown-item" href="#"><i
-                                                        class="fa fa-dot-circle-o text-danger"></i> Inactive</a>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="text-right">
-                                        <div class="dropdown dropdown-action">
-                                            <a aria-expanded="false" class="action-icon dropdown-toggle" data-toggle="dropdown"
-                                               href="#"><i class="material-icons">more_vert</i></a>
-                                            <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" href="javascript:void(0)"><i
-                                                        class="fa fa-pencil m-r-5"></i> Edit</a>
-                                                <a class="dropdown-item" href="javascript:void(0)"><i
-                                                        class="fa fa-trash-o m-r-5"></i> Delete</a>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <h2 class="table-avatar">
-                                            <a class="avatar" href="client-profile.html"><img alt=""
-                                                                                              src="assets/img/profiles/avatar-14.jpg"></a>
-                                            <a href="client-profile.html"> Daniel Deacon <span>CEO</span></a>
-                                        </h2>
-                                    </td>
-                                    <td>danieldeacon@example.com</td>
-                                    <td>
-                                        <div class="dropdown action-label">
-                                            <a aria-expanded="false" class="btn btn-white btn-sm btn-rounded dropdown-toggle"
-                                               data-toggle="dropdown" href="#">
-                                                <i class="fa fa-dot-circle-o text-danger"></i> Inactive
-                                            </a>
-                                            <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" href="#"><i
-                                                        class="fa fa-dot-circle-o text-success"></i> Active</a>
-                                                <a class="dropdown-item" href="#"><i
-                                                        class="fa fa-dot-circle-o text-danger"></i> Inactive</a>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="text-right">
-                                        <div class="dropdown dropdown-action">
-                                            <a aria-expanded="false" class="action-icon dropdown-toggle" data-toggle="dropdown"
-                                               href="#"><i class="material-icons">more_vert</i></a>
-                                            <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" href="javascript:void(0)"><i
-                                                        class="fa fa-pencil m-r-5"></i> Edit</a>
-                                                <a class="dropdown-item" href="javascript:void(0)"><i
-                                                        class="fa fa-trash-o m-r-5"></i> Delete</a>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
+                                {% endfor %}
                                 </tbody>
                             </table>
                         </div>
                     </div>
                     <div class="card-footer">
-                        <a href="clients.html">View all clients</a>
+                        <a href="{% url 'AdminClientsView' %}">View all clients</a>
                     </div>
                 </div>
             </div>
@@ -289,10 +122,10 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                {% for project_list in projects %}
+                                {% for project in project_list %}
                                 <tr>
                                     <td>
-                                        <h2><a href="{% url 'AdminProjectDetailsView' project_list.id %}">{{project_list.project_name}}</a>
+                                        <h2><a href="{% url 'AdminProjectDetailsView' project.id %}">{{project.project_name}}</a>
                                         </h2>
                                         <small class="block text-ellipsis">
                                             <span>1</span> <span class="text-muted">open tasks, </span>
