--- a/templates/admin/client-profile.html
+++ b/templates/admin/client-profile.html
@@ -50,6 +50,11 @@
 										<div class="profile-img-wrap">
 											<div class="profile-img">
 												<img class="avatar" src="{{client.client_avatar.url}}" alt="Client Profile Image">
+												{% if client.active_status == True %}
+													<span style="position: absolute; bottom: 0; right:5%; border:4px solid white; width: 30px; height: 30px; background-color: green; border-radius: 50%;"></span>
+												{% else %}
+													<span style="position: absolute; bottom: 0; right:5%; border:4px solid white; width: 30px; height: 30px; background-color: red; border-radius: 50%;"></span>
+												{% endif %}
 											</div>
 										</div>
 										<div class="profile-basic">
@@ -60,7 +65,6 @@
 														<h4 class="company-role m-t-0 mb-1">Name : {{client.username}}</h4>
 														<div>Designation : {{client.position}}</div>
 														<div>Nationality : {{client.nationality}}</div>
-														<div>Status : {% if client.active_status == True %}<span style="color:green"> Active </span>{% else %}<span style="color:red">Deactivate</span>{% endif %}</div>
 													</div>
 												</div>
 												<div class="col-md-7">
@@ -161,7 +165,7 @@
 									</div>
 								</div>
 								<!-- /Delete Project Modal -->
-								
+
 							</div>
 						</div>
 					</div>
