--- a/templates/employee/project-view.html
+++ b/templates/employee/project-view.html
@@ -40,47 +40,16 @@
 							<div class="card">
 								<div class="card-body">
 				                    <h5 class="card-title m-b-20">Uploaded image files</h5>
-									<div class="row">
+									<div class="row" style="overflow-x: scroll; flex-wrap:nowrap">
+										{% for image in project_images %}
 										<div class="col-md-3 col-sm-4 col-lg-4 col-xl-3">
 											<div class="uploaded-box">
 												<div class="uploaded-img">
-													<img src="assets/img/placeholder.jpg" class="img-fluid" alt="">
-												</div>
-												<div class="uploaded-img-name">
-													 demo.png
+													<img src="{{image.project_image.url}}" alt="" style="width:100%; height:10rem">
 												</div>
 											</div>
 										</div>
-										<div class="col-md-3 col-sm-4 col-lg-4 col-xl-3">
-											<div class="uploaded-box">
-												<div class="uploaded-img">
-													<img src="assets/img/placeholder.jpg" class="img-fluid" alt="">
-												</div>
-												<div class="uploaded-img-name">
-													 demo.png
-												</div>
-											</div>
-										</div>
-										<div class="col-md-3 col-sm-4 col-lg-4 col-xl-3">
-											<div class="uploaded-box">
-												<div class="uploaded-img">
-													<img src="assets/img/placeholder.jpg" class="img-fluid" alt="">
-												</div>
-												<div class="uploaded-img-name">
-													 demo.png
-												</div>
-											</div>
-										</div>
-										<div class="col-md-3 col-sm-4 col-lg-4 col-xl-3">
-											<div class="uploaded-box">
-												<div class="uploaded-img">
-													<img src="assets/img/placeholder.jpg" class="img-fluid" alt="">
-												</div>
-												<div class="uploaded-img-name">
-													 demo.png
-												</div>
-											</div>
-										</div>
+										{% endfor %}
 									</div>
 								</div>
 							</div>
@@ -88,48 +57,18 @@
 								<div class="card-body">
 									<h5 class="card-title m-b-20">Uploaded files</h5>
 									<ul class="files-list">
-										<li>
-											<div class="files-cont">
-												<div class="file-type">
-													<span class="files-icon"><i class="fa fa-file-pdf-o"></i></span>
-												</div>
-												<div class="files-info">
-													<span class="file-name text-ellipsis"><a href="#">AHA Selfcare Mobile Application Test-Cases.xls</a></span>
-													<span class="file-author"><a href="#">John Doe</a></span> <span class="file-date">May 31st at 6:53 PM</span>
-													<div class="file-size">Size: 14.8Mb</div>
-												</div>
-												<ul class="files-action">
-													<li class="dropdown dropdown-action">
-														<a href="" class="dropdown-toggle btn btn-link" data-toggle="dropdown" aria-expanded="false"><i class="material-icons">more_horiz</i></a>
-														<div class="dropdown-menu dropdown-menu-right">
-															<a class="dropdown-item" href="javascript:void(0)">Download</a>
-														</div>
-													</li>
-												</ul>
+										{% for file in project_files %}
+										<li class="p-0">
+											<div class="d-flex">
+												<span class="icon"><i class="las la-file la-2x"></i></span>
+												<span class="pt-1 ml-2">{{file.project_file|cut:'project_files/'}}</span>
+												<span class="ml-auto">
+													<a class="btn" href="{{file.project_file.url}}"><i class="las la-download la-lg"></i></a>
+												</span>
+
 											</div>
 										</li>
-										<li>
-											<div class="files-cont">
-												<div class="file-type">
-													<span class="files-icon"><i class="fa fa-file-pdf-o"></i></span>
-												</div>
-												<div class="files-info">
-													<span class="file-name text-ellipsis"><a href="#">AHA Selfcare Mobile Application Test-Cases.xls</a></span>
-													<span class="file-author"><a href="#">Richard Miles</a></span> <span class="file-date">May 31st at 6:53 PM</span>
-													<div class="file-size">Size: 14.8Mb</div>
-												</div>
-												<ul class="files-action">
-													<li class="dropdown dropdown-action">
-														<a href="" class="dropdown-toggle btn btn-link" data-toggle="dropdown" aria-expanded="false"><i class="material-icons">more_horiz</i></a>
-														<div class="dropdown-menu dropdown-menu-right">
-															<a class="dropdown-item" href="javascript:void(0)">Download</a>
-															<a class="dropdown-item" href="#" data-toggle="modal" data-target="#share_files">Share</a>
-															<a class="dropdown-item" href="javascript:void(0)">Delete</a>
-														</div>
-													</li>
-												</ul>
-											</div>
-										</li>
+										{% endfor %}
 									</ul>
 								</div>
 							</div>
