--- a/templates/employee/navigationpanel.html
+++ b/templates/employee/navigationpanel.html
@@ -102,6 +102,8 @@
                 <li class="menu-title"><span>Project</span></li>
                 <li><a href="{% url 'EmpProjectsView' user.id %}"><i class="las la-project-diagram"></i><span>Projects</span></a></li>
                 <li><a href="{% url 'EmpProjectTask' user.id %}"><i class="las la-tasks"></i><span>Tasks</span></a></li>
+                <li class="menu-title"><span>Company</span></li>
+                <li><a href="{% url 'EmpPoliciesView' %}"><i class="las la-file-pdf"></i><span>Policies</span></a></li>
                 <li class="menu-title"><span>Account</span></li>
                 <li><a href="{% url 'EmpProfileView' user.id %}"><i class="las la-user"></i><span>Profile</span></a></li>
 <!--                <li><a href="clients"><span>Clients</span></a></li>-->
