--- a/templates/admin/navigationpanel.html
+++ b/templates/admin/navigationpanel.html
@@ -19,6 +19,8 @@
                 <li class="menu-title"><span>Project</span></li>
                 <li><a href="{% url 'AdminProjectsView' %}"><i class="las la-project-diagram"></i><span>Projects</span></a></li>
                 <li><a href="{% url 'AdminProjectTask' %}"><i class="las la-tasks"></i><span>Tasks</span></a></li>
+                <li class="menu-title"><span>Company</span></li>
+                <li><a href="{% url 'AdminPoliciesView' %}"><i class="las la-file-pdf"></i><span>Policies</span></a></li>
 <!--                <li><a href="{% url 'AdminDepartmentView' %}"><span>Leads</span></a></li>-->
 <!--                <li><a href="trainers.html"><span>Trainers</span></a></li>-->
                 <!--							<li><a href="promotion.html"><i class="la la-bullhorn"></i> <span>Promotion</span></a></li>-->
